refactoring and add utilities
add middleware and token,
modify page blog (MVC)
modify connexion and inscription (MVC)
dashboard in progress (MVC)

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,10 @@
        "twig/twig":"^2.0",
         "altorouter/altorouter": "^1.2",
         "tinymce/tinymce": ">= 4", 
-        "ezyang/htmlpurifier":">=4"
+        "ezyang/htmlpurifier":">=4", 
+        "psr/http-message": "^1.0",
+        "psr/http-server-middleware":"^1.0.1",
+        "guzzlehttp/guzzle": "^6.3"
     }, 
     "require-dev": {
         "symfony/var-dumper": "^4.2"
