--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "psr/http-message": "^1.0",
         "psr/http-server-middleware":"^1.0.1",
         "http-interop/response-sender": "^1.0",
-        "guzzlehttp/guzzle": "^6.3"
+        "guzzlehttp/guzzle": "^6.3",
+        "ext-pdo": "*"
     }, 
     "require-dev": {
         "symfony/var-dumper": "^4.2"
